--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "moment": "^2.30.1",
     "mongoose": "^8.4.3",
+    "mongoose-unique-validator": "^5.0.1",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2"
