--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.4.3",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.14",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2"
   },
