--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -12,12 +12,15 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
     "moment": "^2.30.1",
     "mongoose": "^8.4.3",
     "mongoose-unique-validator": "^5.0.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.14",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2"
   },
