--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -20,6 +20,8 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
+    "passport-facebook-token": "^4.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2"
