--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.3",
     "mongoose-unique-validator": "^5.0.1",
@@ -22,6 +23,7 @@
     "passport": "^0.7.0",
     "passport-facebook-token": "^4.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2"
