--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -21,6 +21,7 @@
     "mongoose-unique-validator": "^5.0.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.14",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
