--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.9.14",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.7.0",
+    "passport-facebook-token": "^4.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
