--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.4.3",
     "mongoose-unique-validator": "^5.0.1",
     "morgan": "~1.9.1",
+    "newrelic": "^12.6.0",
     "nodemailer": "^6.9.14",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.7.0",
